test/files/pos/t6712.scala
class H {
  object O

  def foo(): Unit = { object O }
}
