test/files/neg/macro-noexpand/Macros_1.scala
object Macros {
  def macro foo(x: Any) = ???
}